feat: added moderation features kick/ban/unban
