# internal/database/model/guild_ban.go
@@ -1,0 +1,7 @@
+package model
+
+type GuildBan struct {
+	GuildId int64
+	UserId  int64
+	Reason  *string
+}
