# internal/dto/guild_ban.go
@@ -1,0 +1,6 @@
+package dto
+
+type GuildBan struct {
+	User   User    `json:"user"`
+	Reason *string `json:"reason,omitempty"`
+}
